collapse fixed

--- a/css/purchaseBlock.css
+++ b/css/purchaseBlock.css
@@ -1,9 +1,7 @@
 /*------------------------------------------------------------------------------*/
 /*-------------------------buttons-----------------------------*/
 /*------------------------------------------------------------------------------*/
-.btn{
-  border-radius: 25%;
-}
+
 .bouton-image:before {
     content: "";
     width: 120px;
@@ -33,6 +31,7 @@
 
 #usd-button{
   background-color: #00BEA3;
+  border-radius: 50%;
 }
 
 #usd-button:focus{
@@ -40,6 +39,7 @@
 }
 #ether-button{
   background-color: #00BEA3;
+    border-radius: 50%;
 }
 
 #ether-button:focus{
@@ -48,6 +48,7 @@
 
 #bitcoin-button{
   background-color: #00BEA3;
+    border-radius: 50%;
 }
 
 #bitcoin-button:focus{
@@ -56,13 +57,14 @@
 
 #eur-button{
   background-color: #00BEA3;
+    border-radius: 50%;
 }
 
 #eur-button:focus{
   background-color: #16f1d2;
 }
 
-.btn:focus, .btn:active, .btn:hover {
+.curbtn:focus, .curbtn:active, .curbtn:hover {
     outline: none !important;
     border:1px solid #00584b;
     box-shadow: 1px 1px 10px black;
